--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 // !compileOnSave
 @charset 'utf-8';
 div {
-  background-color: lightgray;
+  background-color: white;
   margin: 0 auto;
   p {
     padding: 0 0 0 10px;
