--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -1,7 +1,7 @@
 // compileCompressed: ../css/$1.css
 @charset "utf-8";
 div {
-  background-color: white;
+  background-color: red;
   margin: 0 auto;
   p {
     padding: 0 0 0 10px;
