--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -4,7 +4,7 @@ div {
   background-color: red;
   margin: 0 auto;
   p {
-    padding: 0 0 0 10px;
+    padding: 1em 0;
     span {
       font-size: 2em;
     }
