--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -1,12 +1,201 @@
 // compileCompressed: ../css/$1.css
 @charset "utf-8";
-div {
-  background-color: red;
-  margin: 0 auto;
-  p {
-    padding: 1em 0;
-    span {
-      font-size: 2em;
-    }
-  }
+
+/*===header-menu===*/
+.navigation-top{
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: none;
+	background: transparent;
+	box-sizing: border-box!important;
+	width:100%;
+	z-index:99998;
+	
+	.menu-toggle{
+		position: absolute;
+		top: 0;
+		right: 20px;
+		z-index:99999;
+		outline: none;
+		box-sizing: border-box;
+		cursor: pointer;
+		width:2.5em;
+		height:2.5em;
+		overflow: hidden;
+
+		.icon{
+			height:1.5em;
+			width:1.5em;
+		}
+	}
+		
+	.wrap{
+		max-width: 100%;
+		
+		a{
+			font-size: 15px;
+			color: #666;
+			font-weight: 500;
+			cursor: pointer;
+			outline: none;
+		}
+	}
+}
+
+.panel-image{
+	display: none;
+}
+
+.dropdown-toggle{
+    border: 0;
+    color: #333;
+    font-size: 16px;
+    padding: 0.5em;
+    position: static;
+	display: inline-block;
+	outline: none;
+}
+
+.main-navigation{
+	a{
+		display: inline-block;
+	}
+	.menu{
+		li{
+			border-bottom: none;
+			padding: .5em 0;
+		}
+	}
+}
+
+
+@media screen and (min-width: 48em) {
+	
+/*===header-menu===*/
+.navigation-top{
+	height: 70px;
+	box-shadow: 0 1px 5px -2px rgba(200,200,200,0.7);
+	background: #fff;
+	
+	.wrap{
+		max-width: 100%;
+		box-sizing: border-box;
+		padding: 0;
+		
+		a{
+			font-size: 14px;
+			line-height: 70px;
+			padding: 0 10px;
+			outline: none;
+		}
+		
+		a:hover{
+			background: #333;
+			color:#fefefe;
+		}
+	}
+	
+	nav{
+		margin-left: 30px;
+	}
+}
+
+.main-navigation{
+	.menu{
+		
+		width: 100%;
+		box-sizing: border-box;
+		
+		li{
+			border-bottom: none;
+			padding: 0;
+		}
+		
+		li:hover > ul{
+			left:0;
+		}
+		
+		li.menu-item-has-children:before,
+		li.menu-item-has-children:after,
+		li.page_item_has_children:before,
+		li.page_item_has_children:after{
+			border: none;
+			border-width: 0 6px 6px;
+			height: 0;
+			right: 1em;
+			bottom: 0px;
+			width: 0;
+			background: #fff;
+		}
+		ul{
+			border:none;
+			background: #333333;
+			top: 100%;
+			left:0;
+		}
+	}
+}
+
+.menu{
+
+	ul{
+		a{
+			color:#fefefe!important;
+		}
+		a:hover{
+			background: #767676!important;
+		}
+		li{
+			overflow: hidden;
+			height: 0;
+			transition: .2s;
+			line-height: 70px;}
+	}
+	
+	li:hover{
+		ul{
+			li{
+				overflow: visible;
+				height: 70px;
+			}
+		}
+	}
+}	
+	
+.menu-scroll-down{
+	display: none !important;
+}
+
+	
+/*===main-visual===*/
+#wp-custom-header-video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width:100vw!important;
+	height:auto;
+}
+
+#masthead, .custom-header, .custom-header-media {
+    width: 100vw !important;
+    max-height: calc(100vw / 16 * 9) !important;
+}
+
+.wp-custom-header{
+    max-height: calc(100vw / 16 * 9) !important;
+}
+
+}
+
+@media screen and (min-width: 60em) {
+.navigation-top{	
+	.wrap{
+		a{
+			font-size: 14px;
+			padding: 0 20px;
+		}
+	}
+}
+	
 }
