--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -1,6 +1,13 @@
 // compileCompressed: ../css/$1.css
 @charset "utf-8";
 
+
+.cf:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
 /*===header-menu===*/
 .navigation-top{
 	position: absolute;
@@ -225,9 +232,11 @@
 
 /*==========================
 
-main-visual
+front-page
 
 ===========================*/
+
+/*main-visual*/
 
 #wp-custom-header-video {
 	display: none;
@@ -305,16 +314,6 @@ main-visual
 	}
 }
 
-.page-one-column{
-	.panel-content{
-		overflow: visible;
-		.wrap{
-			max-width: 1000px;
-		}
-	}
-}
-
-
 @media screen and (min-width: 24em) {
 .site-branding-text{
 	.site-title{
@@ -376,3 +375,153 @@ main-visual
 	
 }
 
+/*contents*/
+
+.page {
+	.panel-content {
+		h2{
+			font-size:24px!important;
+			font-size:1.5rem!important;
+			color:#333!important;
+			text-transform: none!important;
+		}
+		.top-image{
+			margin-bottom: 30px;
+		}
+		.wrap{
+			padding-bottom: 0;
+		}
+	}
+}
+
+
+.flex-wrap{
+	display:-webkit-box;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-wrap:wrap;
+	flex-wrap:wrap;
+
+	.top-message{
+		-webkit-box-ordinal-group:1;
+		-ms-flex-order:1;
+		-webkit-order:1;
+		order:1;
+	}
+	.top-image{
+		-webkit-box-ordinal-group:0;
+		-ms-flex-order:0;
+		-webkit-order:0;
+		order:0;
+	}
+}
+
+.entry-content{
+	.detail{
+		padding-top:1.75em;
+		padding-bottom:0.5em;
+	}
+}
+
+.googlemaps{
+	iframe{
+		padding-left: calc(50vw - 50%);
+		padding-right: calc(50vw - 50%);
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);
+	}
+}
+
+.twentyseventeen-front-page {
+	article:not(.has-post-thumbnail):not(:first-child){
+		border-top: none;
+	}
+}
+
+@media screen and (min-width: 30em) {
+.entry-content{
+	.detail{
+		padding-top:2em;
+		padding-bottom:3.5em;
+	}
+}
+}
+
+@media screen and (min-width: 48em) {
+.page-one-column{
+	.panel-content{
+		overflow: visible;
+		.wrap{
+			max-width: 1000px;
+		}
+	}
+}
+
+.page {
+	.panel-content {
+		h2{
+			font-size:28px!important;
+			font-size:1.75rem!important;
+			text-transform: none!important;	
+			display: flex;
+			align-items: center;
+			text-align: center; /* for no-flexbox browsers */
+		}
+		h2:after {
+			border-top: 1px solid #ccc;
+			content: "";
+			display: inline; /* for IE */
+			flex-grow: 1;
+			margin-left: 0.5em;
+		}
+	}
+}
+.panel-content{	
+	.flex-wrap{
+		display:block;
+		.top-message{
+			margin-bottom: 30px;
+		}
+	
+		.top-image{
+			margin-bottom: 100px;
+		
+			img{
+				border-radius: 10px;
+			}
+		}
+	}
+}
+	
+.entry-content{
+	.detail{
+		background: #eee;
+		padding-left: calc(50vw - 50%);
+		padding-right: calc(50vw - 50%);
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);
+		padding-top:6em;
+		padding-bottom:4.5em;
+		
+		.left{
+			width: 48%;
+			float: left;
+			margin-right: 2%;
+		}
+		.right{
+			width: 50%;
+			float: left;
+		}
+	}
+}
+	
+.googlemaps{
+	iframe{
+		padding-left: 0;
+		padding-right: 0;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+	
+}
