--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -555,6 +555,41 @@ front-page
 	}
 }
 
+/*footer*/
+.site-info{
+	width:100%;
+	border-top: 1px solid #333;
+	float: none;
+	text-align: center;
+	padding-top: 30px;
+	a{
+		position: relative;
+	}
+	
+	a:after{
+    z-index: 2;
+    display: block;
+    position: absolute;
+    background: #fff;
+    color: #333;
+    font-size: 40px;
+    content: "\f120";
+    font-family: dashicons;
+    text-indent: 0;
+    text-align: center;
+    width: 50px;
+		height: 50px;
+    border-radius: 50%;
+    bottom: 30px;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%)
+	}
+}
+
+
+
+
 @media screen and (min-width: 30em) {
 	
 /*detail*/
