--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -1,792 +1,9 @@
 // compileCompressed: ../css/$1.css
 @charset "utf-8";
 
-
-.cf:after {
-  content: "";
-  clear: both;
-  display: block;
-}
-
-/*===header-menu===*/
-.navigation-top{
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: none;
-	background: transparent;
-	box-sizing: border-box!important;
-	width:100%;
-	z-index:99998;
-	
-	.menu-toggle{
-		position: absolute;
-		top: 0;
-		right: 20px;
-		z-index:99999;
-		outline: none;
-		box-sizing: border-box;
-		cursor: pointer;
-		width:3em;
-		height:3em;
-		overflow: hidden;
-
-		.icon{
-			height:2em;
-			width:2em;
-		}
-		.icon-bars{
-			color:#fff;
-		}
-		.icon-close{
-			color:#333;
-		}
-	}
-		
-	.wrap{
-		max-width: 100%;
-		
-		a{
-			font-size: 15px;
-			color: #666;
-			font-weight: 500;
-			cursor: pointer;
-			outline: none;
-		}
-	}
-}
-
-.panel-image{
-	display: none;
-}
-
-.dropdown-toggle{
-    border: 0;
-    color: #333;
-    font-size: 16px;
-    padding: 0.5em;
-    position: static;
-	display: inline-block;
-	outline: none;
-}
-
-.main-navigation{
-	a{
-		display: inline-block;
-	}
-	.menu{
-		li{
-			border-bottom: none;
-			padding: .5em 0;
-		}
-	}
-}
-
-.menu > li:last-child{
-	border: 1px solid #ccc;
-	display: block;
-	text-align: center;
-	margin: 10px 0;
-	padding: 0;
-	
-	a{
-		display: block;
-		padding: 10px 0;
-		color:#333;
-		background: #fafafa;
-		transition: all .2s;
-	}
-	a:hover{
-		background: #333;
-		color:#fff;
-	}
-}
-
-.social-navigation{
-	display: none;
-}
-
-@media screen and (min-width: 48em) {
-
-.navigation-top{
-	height: 70px;
-	box-shadow: 0 1px 5px -2px rgba(200,200,200,0.7);
-	background: #fff;
-	
-	.wrap{
-		max-width: 100%;
-		box-sizing: border-box;
-		padding: 0;
-		
-		a{
-			font-size: 14px;
-			line-height: 70px;
-			padding: 0 10px;
-			outline: none;
-		}
-		
-		a:hover{
-			background: #333;
-			color:#fefefe;
-		}
-	}
-	
-	nav{
-		margin: 0 30px;
-	}
-}
-
-.main-navigation{
-	.menu{
-		
-		width: 100%;
-		box-sizing: border-box;
-		
-		li{
-			border-bottom: none;
-			padding: 0;
-		}
-		
-		li:hover > ul{
-			left:0;
-		}
-		
-		li.menu-item-has-children:before,
-		li.menu-item-has-children:after,
-		li.page_item_has_children:before,
-		li.page_item_has_children:after{
-			border: none;
-			border-width: 0 6px 6px;
-			height: 0;
-			right: 1em;
-			bottom: 0px;
-			width: 0;
-			background: #fff;
-		}
-		ul{
-			border:none;
-			background: #333333;
-			top: 100%;
-			left:0;
-		}
-	}
-}
-
-.menu{
-
-	ul{
-		a{
-			color:#fefefe!important;
-		}
-		a:hover{
-			background: #767676!important;
-		}
-		li{
-			overflow: hidden;
-			height: 0;
-			transition: .2s;
-			line-height: 70px;}
-	}
-	
-	li:hover{
-		ul{
-			li{
-				overflow: visible;
-				height: 70px;
-			}
-		}
-	}
-}	
-
-.menu > li:last-child{
-	border: none;
-	display: inline-block;
-	margin-top: 0px;
-	
-	a{
-		display: block;
-		padding: 0;
-		background: transparent;
-		transition: none;
-		padding: 0 10px;
-	}
-	a:hover{
-		background: #333;
-		color:#fafafa;
-	}
-}
-
-	
-.menu-scroll-down{
-	display: none !important;
-}
-	
-.social-navigation{
-	position: absolute;
-	top: 0;
-	right: 0;
-	display: block;
-	z-index: 100000;
-	padding:15px 0;
-	width:auto;
-	margin-right: 30px;
-	a {
-		background: none;
-		-webkit-border-radius: 0;
-		border-radius: 0;
-		color: #ccc;
-		display: inline-block;
-		height: 40px;
-		margin: 0;
-		text-align: center;
-		width: 40px;
-	}
-	a:hover{
-		color: #333;
-		background: none;
-	}
-	.icon {
-		height: 20px;
-		width: 20px;
-	}	
-}
-	
-}
-
-@media screen and (min-width: 60em) {
-.navigation-top{	
-	.wrap{
-		a{
-			font-size: 14px;
-			padding: 0 20px;
-		}
-	}
-}
-	
-}
-
-/*==========================
-
-front-page
-
-===========================*/
-
-/*main-visual*/
-
-#wp-custom-header-video {
-	display: none;
-	background: transparent;
-}
-
-.custom-header-media:before {
-	background: rgba(0,0,0,0.2);
-}
-
-.site-header{
-	height: 100vh;
-	.custom-header,
-	.custom-header-media{
-		height:100%!important;
-	}
-}
-
-#masthead {
-	background: url(../docs/images/main-bg-sp.jpg);
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	.wrap {
-    padding: 0 !important;
-    text-align: center;
-		.home {
-		 .site-title {
-			justify-content: center;
-			}
-		}
-	}
-}
-
-.wp-custom-header{
-	.wp-custom-header-video-button{
-		opacity: 0;
-	}
-}
-
-.site-branding {
-    margin: 0 !important;
-    padding: 0 !important;
-    top: 0;
-	
-	.wrap{
-		height:100%;
-	}
-}
-	
-.site-branding-text{
-	width:100%;
-	height:100%;
-	position: relative;
-	z-index:99997;
-	
-	.site-title{
-		width: 100%;
-		height: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		
-		a{
-    	background-image: url(../docs/images/pre-logo.png);
-			display: block;
-			background-size: contain;
-			background-repeat: no-repeat;
-			background-position: center center;
-			width: 80vw;
-			height: 70px;
-			overflow: hidden;
-			text-indent: -300%;
-		}
-	}
-}
-
-@media screen and (min-width: 24em) {
-.site-branding-text{
-	.site-title{
-		a{
-			width: 65vw;
-			height: 150px;
-		}
-	}
-}
-	
-}
-
-@media screen and (min-width: 48em) {
-
-#wp-custom-header-video {
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height:auto;
-}
-
-.custom-header-media:before {
-	background: rgba(0, 0, 0 , 0.2);
-}	
-	
-#masthead, .custom-header, .custom-header-media {
-    max-height: calc(100vw / 16 * 9) !important;
-	background: #fafafa!important;
-}
-
-.wp-custom-header{
-	max-height: calc(100vw / 16 * 9) !important;
-	
-	.wp-custom-header-video-button{
-    position: absolute;
-    top: 100px;
-		border-radius: 50%;
-		z-index:10000;
-		opacity: 1;
-	}
-}
-	
-.html5-video-player:not(.ytp-transparent),
-.html5-video-player.ad-interrupting,
-.html5-video-player.ended-mode,
-.html5-video-player.ytp-fullscreen{
-		background: #fff!important;
-}
-	
-.site-branding-text{
-	.site-title{
-		a{
-			width: 50vw;
-			height: 200px;
-    }
-		}
-	}
-	
-}
-
-
-/*message*/
-
-.page {
-	.panel-content {
-		h2{
-			font-size:24px!important;
-			font-size:1.5rem!important;
-			color:#333!important;
-			text-transform: none!important;
-		}
-		.top-image{
-			margin-bottom: 30px;
-		}
-		.wrap{
-			padding-bottom: 0;
-		}
-	}
-}
-
-
-.flex-wrap{
-	display:-webkit-box;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-wrap:wrap;
-	flex-wrap:wrap;
-
-	.top-message{
-		-webkit-box-ordinal-group:1;
-		-ms-flex-order:1;
-		-webkit-order:1;
-		order:1;
-	}
-	.top-image{
-		-webkit-box-ordinal-group:0;
-		-ms-flex-order:0;
-		-webkit-order:0;
-		order:0;
-	}
-}
-
-/*detail*/
-.entry-content{
-	.detail{
-		padding-top:1.75em;
-		padding-bottom:0.5em;
-		
-		h2{
-			margin-bottom: 1.5em;
-		}
-	}
-}
-
-.googlemaps{
-	iframe{
-		padding-left: calc(50vw - 50%);
-		padding-right: calc(50vw - 50%);
-		margin-left: calc(50% - 50vw);
-		margin-right: calc(50% - 50vw);
-	}
-}
-
-/*blog*/
-.twentyseventeen-front-page {
-	article:not(.has-post-thumbnail):not(:first-child){
-		border-top: none;
-	}
-}
-
-#panel1{
-	.entry-header{
-		display: none;
-	}
-}
-
-#panel1{
-	.recent-posts{
-		.entry-header{
-			display: block;
-		}
-	}
-}
-
-.recent-posts{	
-	article{
-	background: url(../docs/images/wapu_bg.jpg) no-repeat;
-	background-size: 200px;
-	padding-left: 100px;
-	padding-right: 100px;
-	padding-top:30px;
-	margin-left: -100px;
-	margin-right: -100px;
-	margin-top:-30px;
-		h3{
-			font-weight: 700!important;
-		}
-		h3 a:hover{
-			box-shadow: none!important;
-			-webkit-box-shadow:none!important;
-		}
-	}
-	article:nth-child(odd){
-		background-position: 100% 2px;
-	}
-	article:nth-child(even){
-		background-position: 0 2px;
-	}
-}
-
-/*social*/
-
-#panel2{
-		background: #eee;
-		padding-bottom: 4.5em;
-	}
-
-/*sponsor*/
-
-.site-footer{
-	border: none;
-	h2{
-		font-size:24px!important;
-		font-size:1.5rem!important;
-		color:#333!important;
-		text-transform: none!important;
-		margin-bottom: 1.5em;
-	}
-	a{
-		-webkit-box-shadow:none!important;
-		box-shadow: none!important;
-	}
-}
-
-.sponsor-level{
-		font-size: 0;
-		letter-spacing: 0;
-		margin-bottom: 30px;
-		margin-left: -4%;
-	h4{
-		padding-left: 4%;
-	}
-	.sponsor-logo{
-		font-size: 1rem;
-		display: inline-block!important;
-		box-sizing: border-box;
-		padding-left: 4%;
-		margin-bottom: 2%;
-		img{
-			width: 100%!important;
-			max-height: 300px;
-		}
-	}
-	.sponsor-logo:hover{
-		opacity: 0.7;
-	}
-}
-
-.sponsor-level.plutinum{
-	.sponsor-logo{
-		width:100%;
-	}
-}
-
-.sponsor-level.gold{
-	.sponsor-logo{
-		width:100%;
-	}
-}
-
-.sponsor-level.silver{
-	.sponsor-logo{
-		width:50%;
-	}
-}
-
-.sponsor-level.bronze{
-	.sponsor-logo{
-		width:50%;
-	}
-}
-
-.sponsor-level.micro{
-	.sponsor-logo{
-		width:50%;
-	}
-}
-
-/*footer*/
-.site-info{
-	width:100%;
-	border-top: 1px solid #333;
-	float: none;
-	text-align: center;
-	padding-top: 30px;
-	a{
-		position: relative;
-	}
-	
-	a:after{
-    z-index: 2;
-    display: block;
-    position: absolute;
-    background: #fff;
-    color: #333;
-    font-size: 40px;
-    content: "\f120";
-    font-family: dashicons;
-    text-indent: 0;
-    text-align: center;
-    width: 50px;
-		height: 50px;
-    border-radius: 50%;
-    bottom: 30px;
-    left: 50%;
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%)
-	}
-}
-
-.social-navigation + .site-info{
-	margin-left: 0;
-}
-
-
-@media screen and (min-width: 30em) {
-	
-/*detail*/
-.entry-content{
-	.detail{
-		padding-top:2em;
-		padding-bottom:3.5em;
-	}
-	h2{
-		margin-bottom: 1.5em;
-	}
-}
-}
-
-@media screen and (min-width: 48em) {
-/*message*/
-.page-one-column{
-	.panel-content{
-		overflow: visible;
-		.wrap{
-			max-width: 1000px;
-		}
-	}
-}
-
-.page {
-	.panel-content {
-		h2{
-			font-size:28px!important;
-			font-size:1.75rem!important;
-			text-transform: none!important;	
-			display: flex;
-			align-items: center;
-			text-align: center; /* for no-flexbox browsers */
-		}
-		h2:after {
-			border-top: 1px solid #ccc;
-			content: "";
-			display: inline; /* for IE */
-			flex-grow: 1;
-			margin-left: 0.5em;
-		}
-	}
-}
-.panel-content{	
-	.flex-wrap{
-		display:block;
-		.top-message{
-			margin-bottom: 30px;
-		}
-	
-		.top-image{
-			margin-bottom: 100px;
-		
-			img{
-				border-radius: 10px;
-			}
-		}
-	}
-}
-
-/*detail*/
-.entry-content{
-	.detail{
-		background: #eee;
-		padding-left: calc(50vw - 50%);
-		padding-right: calc(50vw - 50%);
-		margin-left: calc(50% - 50vw);
-		margin-right: calc(50% - 50vw);
-		padding-top:6em;
-		padding-bottom:4.5em;
-		
-		.left{
-			width: 48%;
-			float: left;
-			margin-right: 2%;
-		}
-		.right{
-			width: 50%;
-			float: left;
-		}
-	}
-}
-	
-.googlemaps{
-	iframe{
-		padding-left: 0;
-		padding-right: 0;
-		margin-left: 0;
-		margin-right: 0;
-	}
-}
-
-.twentyseventeen-front-page.page-one-column{
-	.entry-header	{
-		margin-bottom: 1.5rem;
-	}
-}
-	
-/*sponsor*/
-.site-footer{
-	h2{
-		font-size:28px!important;
-		font-size:1.75rem!important;
-		text-transform: none!important;	
-		display: flex;
-		align-items: center;
-		text-align: center; /* for no-flexbox browsers */
-		margin-bottom: 3.0em;
-	}
-	h2:after {
-		border-top: 1px solid #ccc;
-		content: "";
-		display: inline; /* for IE */
-		flex-grow: 1;
-		margin-left: 0.5em;
-	}
-	.widget-column.footer-widget-1{
-		float: none;
-		width:100%;
-	}
-}
-
-.sponsor-level.platinum{
-	.sponsor-logo{
-		width:50%;
-	}
-}
-
-.sponsor-level.gold{
-	.sponsor-logo{
-		width:33.33333333%;
-	}
-}
-
-.sponsor-level.silver{
-	.sponsor-logo{
-		width:25%;
-	}
-}
-
-.sponsor-level.bronze{
-	.sponsor-logo{
-		width:20%;
-	}
-}
-
-.sponsor-level.micro{
-	.sponsor-logo{
-		width:14.2857143%;
-	}
-}	
-	
-	
-}
+@import "global/rule";
+@import "global/base";
+@import "global/header";
+@import "global/navigation";
+@import "global/footer";
+@import "project/front-page";
