--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -11,10 +11,6 @@ front-page
     background: transparent;
 }
 
-.custom-header-media:before {
-    background: rgba(0,0,0,0.2);
-}
-
 .site-header{
     height: 100vh;
     .custom-header,
@@ -37,6 +33,10 @@ front-page
             }
         }
     }
+}
+
+.custom-header-media:before{
+		background: none;
 }
 
 .wp-custom-header{
@@ -78,6 +78,7 @@ front-page
             height: 70px;
             overflow: hidden;
             text-indent: -300%;
+						outline: none;
         }
     }
 }
@@ -96,25 +97,44 @@ front-page
 
 @media screen and (min-width: 48em) {
 
-    #wp-custom-header-video {
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height:auto;
-    }
-
-    .custom-header-media:before {
-        background: rgba(0, 0, 0 , 0.2);
-    }
-
+		.site-header{
+				height: auto;
+  		  .custom-header,
+  		  .custom-header-media{
+  		      height:100%!important;
+  		 }
+		}	
+	
     #masthead, .custom-header, .custom-header-media {
-        max-height: calc(100vw / 16 * 9) !important;
-        background: #fafafa!important;
+        background: #ffffff!important;
     }
 
+		.wp-custom-header{
+				max-width: 1200px;
+   			position: relative;
+    		width: 100%;
+				height: 100%;
+				margin: 0 auto;
+		}
+	
+		.wp-custom-header:before{
+				content:"";
+    		display: block;
+    		padding-top: 56.25%;
+		}
+
+    #wp-custom-header-video {
+    		position: absolute;
+    		top: 0;
+    		left: 0;
+    		width: 100%;
+   			height: 101%;
+				display: block;
+				min-width: 10px;
+				border: none;
+    }	
+	
     .wp-custom-header{
-        max-height: calc(100vw / 16 * 9) !important;
 
         .wp-custom-header-video-button{
             position: absolute;
@@ -134,6 +154,7 @@ front-page
 
     .site-branding-text{
         .site-title{
+					transform: translateY(35px);
             a{
                 width: 50vw;
                 height: 200px;
