--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -123,7 +123,7 @@
 .menu > li.btn-join{
 		display: block;
     position: absolute;
-    top: 450px;
+    top: 420px;
     text-align: center;
     left: 50%;
     transform: translateX(-50%);
@@ -131,8 +131,8 @@
 	
 	a{
 			color:#fff;
-			font-size:20px;
-			font-size: 1.25rem;
+			font-size:16px;
+			font-size: 1rem;
 			background: rgba(255, 102, 0, 1.0);
 			padding:10px 20px;
 	}
@@ -146,6 +146,18 @@
     display: none;
 }
 
+
+@media screen and (min-width: 24em){
+.menu > li.btn-join{
+    top: 450px;
+	
+	a{
+			font-size:20px;
+			font-size: 1.25rem;
+	}
+
+}
+}
 
 @media screen and (min-width: 48em) {
 
