ナビゲーション部分

--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -109,7 +109,7 @@
         transition: all .2s;
     }
     a:hover{
-        background: #333;
+        background: $base-color;
         color:#fff;
     }
 }
@@ -133,11 +133,11 @@
 			color:#fff;
 			font-size:16px;
 			font-size: 1rem;
-			background: rgba(255, 102, 0, 1.0);
+			background: $color-green;;
 			padding:10px 20px;
 	}
 	a:hover{
-			background: rgba(255, 150, 0, 1.0);
+			background: $base-color;
 	}
 	
 }
@@ -163,23 +163,27 @@
 
     .navigation-top{
         height: 70px;
-        background: #fff;
-
+				box-sizing: border-box;
+        background: linear-gradient(to right, $base-color, $color-lilac);
         .wrap{
             max-width: 100%;
             box-sizing: border-box;
             padding: 0;
+						height: 62px;
+						background: #fff;
+						margin-top:8px;
 
             a{
                 font-size: 14px;
-                line-height: 70px;
+                font-size: 0.85rem;
+                line-height: 62px;
                 padding: 0 10px;
                 outline: none;
             }
 
             a:hover{
-                background: #333;
-                color:#fefefe;
+                background: $base-color;
+                color:#fff;
             }
         }
 
@@ -199,11 +203,15 @@
         .menu{
 
             width: 100%;
+						height:100%;
             box-sizing: border-box;
+						font-size: 0;
+						letter-spacing: 0;
 
             li{
                 border-bottom: none;
                 padding: 0;
+								box-sizing: border-box;
             }
 
             li:hover > ul{
@@ -220,11 +228,10 @@
                 right: 1em;
                 bottom: 0px;
                 width: 0;
-                background: #fff;
             }
             ul{
                 border:none;
-                background: #333333;
+                background: $base-color;
                 top: 100%;
                 left:0;
             }
@@ -238,23 +245,23 @@
 
         ul{
             a{
-                color:#fefefe!important;
+                color:#fff!important;
             }
             a:hover{
-                background: #767676!important;
+                background: $color-green!important;
             }
             li{
                 overflow: hidden;
                 height: 0;
                 transition: .2s;
-                line-height: 70px;}
+                line-height: 62px;}
         }
 
         li:hover{
             ul{
                 li{
                     overflow: visible;
-                    height: 70px;
+                    height: 62px;
                 }
             }
         }
@@ -271,10 +278,11 @@
             background: transparent;
             transition: none;
             padding: 0 10px;
+						color:#666;
         }
         a:hover{
-            background: #333;
-            color:#fafafa;
+            background: $base-color;
+            color:#fff;
         }
     }
 
@@ -311,7 +319,7 @@
             width: 40px;
         }
         a:hover{
-            color: #333;
+            color: $base-color;
             background: none;
         }
         .icon {
