フロントページ（カラー）

--- a/scss/global/_footer.scss
+++ b/scss/global/_footer.scss
@@ -93,7 +93,7 @@
         display: block;
         position: absolute;
         background: #fff;
-        color: #333;
+        color: $color-green;
         font-size: 40px;
         content: "\f120";
         font-family: dashicons;
