--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -251,9 +251,33 @@ front-page
         margin-left: -100px;
         margin-right: -100px;
         margin-top:-30px;
-        h3{
-            font-weight: 700!important;
+				
+			a{
+				margin-left: 0;
+			}
+			
+				a:hover{
+					  box-shadow: none!important;
+            -webkit-box-shadow:none!important;
+				}
+				.entry-meta a{
+					color:#aaa;
+				}
+
+        h3 {
+					  background: #333;
+					  background: -webkit-linear-gradient(0deg, $color-green, $color-lilac);
+ 						-webkit-background-clip: text;
+					  -webkit-text-fill-color: transparent;
         }
+				
+				h3 a{
+				    font-weight: 700!important;
+						font-size:1.5rem;
+            box-shadow: none!important;
+            -webkit-box-shadow:none!important;
+				}
+				
         h3 a:hover{
             box-shadow: none!important;
             -webkit-box-shadow:none!important;
@@ -371,4 +395,13 @@ front-page
             margin-bottom: 1.5rem;
         }
     }
+	
+		.recent-posts{
+				article{
+
+						h3 a{
+								font-size:1.875rem;
+						}
+		}	
+	}
 }
