ブログタイトル微修正

--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -265,7 +265,7 @@ front-page
 				}
 
         h3 {
-					  background: #333;
+					  color: #333;
 					  background: -webkit-linear-gradient(0deg, $color-green, $color-lilac);
  						-webkit-background-clip: text;
 					  -webkit-text-fill-color: transparent;
