--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -293,7 +293,7 @@ front-page
 /*social*/
 
 #panel2{
-    background: lighten( $base-color, 15% );
+    background:linear-gradient(45deg, rgba(52, 175, 165, 0.15), rgba(179, 214, 211, 0.15), rgba(180, 132, 184, 0.15)), url(../docs/images/bg-geometric.png);
     padding-bottom: 4.5em;
 }
 
@@ -360,7 +360,7 @@ front-page
     /*detail*/
     .entry-content{
         .detail{
-            background: lighten( $base-color, 15% );
+            background:linear-gradient(45deg, rgba(52, 175, 165, 0.15), rgba(179, 214, 211, 0.15), rgba(180, 132, 184, 0.15)), url(../docs/images/bg-geometric.png);
             padding-left: calc(50vw - 50%);
             padding-right: calc(50vw - 50%);
             margin-left: calc(50% - 50vw);
