--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -185,10 +185,10 @@
                 line-height: 62px;
                 padding: 0 10px;
                 outline: none;
+								transition: all .3s;
             }
-
-            a:hover{
-                background: $base-color;
+					
+            a:hover, .current-menu-item:not(.menu-item-home) a{
                 color:#fff;
             }
         }
@@ -218,6 +218,17 @@
                 border-bottom: none;
                 padding: 0;
 								box-sizing: border-box;
+								transition: all .3s;
+            }
+						
+						li a{
+								color: #666;
+						}
+            li:hover{
+								background: $base-color
+            }
+            li:hover a{
+								color: #fff;
             }
 
             li:hover > ul{
@@ -237,9 +248,9 @@
             }
             ul{
                 border:none;
-                background: $base-color;
                 top: 100%;
                 left:0;
+								transition: all .3s;
             }
         }
 				.menu > li:not(.btn-join){
@@ -252,15 +263,21 @@
         ul{
             a{
                 color:#fff!important;
+								opacity:0;
+								transition:all .3s;
             }
-            a:hover{
-                background: $color-green!important;
-            }
+					
             li{
                 overflow: hidden;
                 height: 0;
-                transition: .2s;
-                line-height: 62px;}
+                transition: .3s;
+                line-height: 62px;
+								background: $base-color;
+								transition: all .3s;
+			     }
+					li:hover{
+								background: $color-green!important;
+					}
         }
 
         li:hover{
@@ -268,6 +285,7 @@
                 li{
                     overflow: visible;
                     height: 62px;
+									a{opacity: 1.0;}
                 }
             }
         }
@@ -285,6 +303,7 @@
             transition: none;
             padding: 0 10px;
 						color:#666;
+						transition: all .3s;
         }
         a:hover{
             background: $base-color;
