--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -82,6 +82,9 @@
 		.menu > li:not(.btn-join){
 						display: none;
 		}
+		li li.focus{
+						background: $color-green;
+		}
 }
 
 .main-navigation.toggled-on{
@@ -171,6 +174,7 @@
         height: 70px;
 				box-sizing: border-box;
         background: linear-gradient(to right, $base-color, $color-lilac);
+			
         .wrap{
             max-width: 100%;
             box-sizing: border-box;
@@ -188,7 +192,7 @@
 								transition: all .3s;
             }
 					
-            a:hover, .current-menu-item:not(.menu-item-home) a{
+            a:hover{
                 color:#fff;
             }
         }
